--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto+Slab:wght@300&display=swap');
       html{
         font-family: 'IBM Plex Sans Thai Looped', sans-serif;
         font-family: 'Kanit', sans-serif;
@@ -47,7 +48,7 @@
       display: inline-flex;
       align-items: center;
       padding: 0 0.75em;
-      font-size: 0.6em;
+      font-size: 0.5em;
       font-weight: bold;
       transition: all .2s;
       color: white;
@@ -110,10 +111,10 @@
       max-width:100%;
       background-color: antiquewhite;
       margin: auto;
-      padding-top: 10em;
+      padding-top: 2em;
       padding-left: 20em;
       padding-right: 20em;
-      padding-bottom: 10em;
+      padding-bottom: 5em;
       background-attachment: fixed;
       position: relative;
       gap: 4rem;
@@ -125,10 +126,10 @@
         max-width:100%;
         background-color: antiquewhite;
         margin: auto;
-        padding-top: 5em;
+        padding-top:2em;
         padding-left: 15%;
         padding-right: 20%;
-        padding-bottom: 10em;
+        padding-bottom: 0%;
         background-attachment: fixed;
         position: relative;
         gap: 4rem;
@@ -139,12 +140,11 @@
         grid-template-columns: auto auto auto;
         max-width:100%;
         background-color: rgb(255, 255, 255);
-        /* background-image:url('img/bg2.JPG'); */
         margin: auto;
-        padding-top: 5em;
+        padding-top: 2em;
         padding-left: 5%;
         padding-right: 5%;
-        padding-bottom: 5%;
+        padding-bottom: 0%;
         background-attachment: fixed;
         position: relative;
         gap: 4rem;
@@ -156,10 +156,10 @@
         max-width:100%;
         background-color: rgb(255, 255, 255);
         margin: auto;
-        padding-top: 5em;
+        padding-top: 2em;
         padding-left: 5%;
         padding-right: 5%;
-        padding-bottom: 5%;
+        padding-bottom: 3em;
         background-attachment: fixed;
         position: relative;
         gap: 4rem;
@@ -178,7 +178,8 @@
         justify-content: center;
         align-items: center;
         display: flex;
-        padding-top: 3rem;
+        padding-top: 2rem;
+        padding-bottom: 0;
         flex-flow: column wrap;
         font-size: 3.5rem;
     }
@@ -215,17 +216,13 @@
 
     .pic_me {
         width: 80%;
-        /* height: 500px; */
-        /* height:70%; */
         border-radius: 15px;
         box-shadow: 0px 5px 10px #0005;
-        /* margin: 1em 0 2em; */
         object-fit: contain;
       }
 
       .pic_photo {
         width: auto;
-        /* height: auto; */
         max-height: 17em;
         background: cover;
         border-radius: 15px;
@@ -234,6 +231,7 @@
         object-fit: contain;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
       }
 
     .hr {
@@ -304,3 +302,17 @@
     #click:hover {
       color: rgb(148, 148, 211);
     }
+    .button {
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      border-radius: 5%;
+    }
+    
+    .button1 {background-color: #c4bc8d;} /* Green */
